--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <link rel="icon" href="./favicon.ico">
-    <title>options</title>
+    <title>The Favourites</title>
     <script defer="defer" src="./js/app.cd3ecf5e.js"></script>
     <link href="./css/app.12df034d.css" rel="stylesheet">
 </head>
